maze.lessons.maze.island.IslandMaze.scala.error
Escaper:17: error: not found: value NORTH
			while(getDirection()!=NORTH) {keepHandOnSideWall()}
                                              ^